-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 7.0 Required
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
QE 2022-09-19
-
68
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Fix warning:
src/mongo/db/query/sbe_stage_builder_projection.cpp:86:5: error: return type 'const bool' is 'const'-qualified at the top level, which may reduce code readability without improving const correctness [readability-const-return-type,-warnings-as-errors]