SERVER-69512 Drop 'const' qualifier from return type of ProjectEval::hasSlot()